--- a/day10/day10jQuery02.html
+++ b/day10/day10jQuery02.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="http://code.jquery.com/jquery.js"></script>
     <script>
-        // 자바스크립트는 $나 _ 특수문자로 식별자 선언 가능.
-        // jQuery함수를 $로 참조 시킨것.
-        console.log($ === jQuery);
-        const _ = jQuery;
-        _(document).ready(function() {
-            alert("jQuery 시작");
-        });
+      // 자바스크립트는 $나 _ 특수문자로 식별자 선언가능.
+      // jQuery 함수를 $로 참조시킨것.
+      // 1. 짧으니까 // 2. 특수문자니까 // 3. "_" 는 너무 자주 쓰이니까..
+      console.log($ === jQuery);
+      const _ = jQuery;
+      _(document).ready(function () {
+        alert("jQuery 시작");
+      });
     </script>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body></body>
 </html>
