day11 4교시 jQuery만들기 - 메소드 체이닝

--- a/day11/day11jQuery07.html
+++ b/day11/day11jQuery07.html
@@ -18,7 +18,7 @@
           dom.style.color = colorName;
         };
 
-        // return dom;
+        return dom;
       };
       // color()가 호출되기 위해서는 dom객체가 되어야 한다..
       $("#btn").color("red");
