--- a/day11/day11jQuery16.html
+++ b/day11/day11jQuery16.html
@@ -12,17 +12,33 @@
 
       #hint {
         /* display: none; */
+        display: block;
         position: absolute;
         right: 15%;
         top: 10%;
         background: none;
         border: none;
-        text-align: center;
+        border-radius: 100%;
+        text-align: justify;
+      }
+      #hint:active {
+        margin: 5px 0 0 5px;
+        box-shadow: 3px 3px 3px black;
+        transition-duration: 0.3s;
       }
       #hint > img {
+        margin: 0 0 0 10px;
+        display: block;
         width: 125px;
         height: 125px;
+        /* border: 3px dotted red; */
+        /* border-radius: 100%; */
         transform: scaleX(-1) rotate(30deg);
+        -webkit-user-drag: none;
+        -khtml-user-drag: none;
+        -moz-user-drag: none;
+        -o-user-drag: none;
+        user-drag: none;
         z-index: -1;
       }
 
@@ -65,6 +81,7 @@
         }
         play() {
           this.cell.on("click", function (e) {
+            console.log($(this));
             console.log($(this).data("ch"));
             // 클릭하면 숨겨진 글자가 보인다.
             $(this).text($(this).data("ch"));
@@ -100,8 +117,9 @@
         }
       }
 
+      let hintData = [];
       $(function () {
-        const hintData = [];
+        // let hintData = [];
         const newDivList = [];
         for (let i = 0; i < 16; i++) {
           let newDiv = new Cell(String.fromCharCode((i % 8) + 65));
@@ -126,9 +144,10 @@
           $("#puzzle").append(cells[pos]);
         }
 
-        for (let cell in cells) {
-          hintData.append(cell.innerText);
-        }
+        console.log(hintData);
+        // for (let cell in cells) {
+        //   hintData.append(cell.innerText);
+        // }
 
         setTimeout(function () {
           console.log("3초");
@@ -158,7 +177,7 @@
   </head>
   <body>
     <h1>짝 맞추기 퍼즐 게임</h1>
-    <button id="hint"><img src="twitterBird.png" alt="" />hint?</button>
+    <button id="hint">hint?<img src="Logo_of_Twitter.svg" alt="" /></button>
     <div id="puzzle"></div>
     <div><span id="secArea">5</span>초 후 게임이 시작 됩니다!</div>
   </body>
